name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

homepage:           http://williamdemeo.org
author:             William DeMeo
maintainer:         williamdemeo@gmail.com

category:           Web

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , datetime
                  , lens-aeson
                  , shake
                  , parsec
                  , pandoc
                  , pandoc-types
                  , strptime
                  , time
                  , containers
                  , filepath
                  , old-locale
                  , regex-compat
                  , time
                  , bytestring
                  , string-conv
                  , lens
                  , text
                  , aeson
                  , regex-tdfa
                  , blagda
                  , mtl
                  , directory
                  , tagsoup
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
